--- a/01_ESS-Introduction_to_geophysical_data_analysis.ipynb
+++ b/01_ESS-Introduction_to_geophysical_data_analysis.ipynb
@@ -32,70 +32,62 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "iooxa": {
-     "id": {
-      "block": "Qvm0YHARvB2gpY2xFQs7",
-      "project": "GVe4Q9q4oCpqydat1sXN",
-      "version": 6
-     },
-     "outputId": null
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Install required packages as needed and import\n",
     "# -------------------------------------------- #\n",
     "\n",
-    "import subprocess\n",
-    "import importlib\n",
+    "# import subprocess\n",
+    "# import importlib\n",
     "import sys\n",
+    "import os\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if 'google.colab' in sys.modules:\n",
+    "    !git clone https://github.com/SENSE-UGent/I002658A_ESS.git\n",
+    "    # !pip install -r I002658A_ESS/requirements.txt\n",
+    "    sys.path.append('/content/I002658A_ESS/utils')\n",
+    "    sys.path.append('/content/I002658A_ESS')\n",
     "\n",
-    "import subprocess\n",
-    "import importlib\n",
-    "import sys\n",
+    "# Import the setup function\n",
+    "from setup import check_and_install_packages\n",
     "\n",
-    "# List of required packages\n",
-    "required_packages = [\n",
-    "    'numpy',\n",
-    "    'pandas',\n",
-    "    'matplotlib',\n",
-    "    'scipy',\n",
-    "    'sklearn',\n",
-    "    'clhs',\n",
-    "    'ipywidgets',\n",
-    "    'IPython'\n",
-    "]\n",
+    "# Read the requirements.txt file\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    requirements_path = '/content/I002658A_ESS/requirements.txt'\n",
+    "else:\n",
+    "    requirements_path = '/c:/Users/pdweerdt/Documents/Repos/I002658A_ESS/requirements.txt'\n",
     "\n",
-    "def check_and_install_packages(package_list):\n",
-    "# Function to check for required packages and install them if not found\n",
-    "# integrates functionality to operate in Jupyter environment (including \n",
-    "# Google Colab) or standard IDE (VSCode, PyCharm, etc.)\n",
-    "# ==================================================================== #\n",
-    "    for package in package_list:\n",
-    "        try:\n",
-    "            importlib.import_module(package)\n",
-    "        except ImportError:\n",
-    "            print(f\"{package} not found, installing...\")\n",
-    "            try:\n",
-    "                # Check if in a Jupyter (IPython) environment\n",
-    "                if 'get_ipython' in globals():\n",
-    "                    print(\"Using Jupyter magic command to install.\")\n",
-    "                    get_ipython().system(f'pip install {package}')\n",
-    "                else:\n",
-    "                    # Fallback to standard IDE installation method\n",
-    "                    subprocess.run(\n",
-    "                        [sys.executable, '-m', 'pip', 'install', package], \n",
-    "                        check=True, \n",
-    "                        capture_output=True\n",
-    "                        )\n",
-    "            except Exception as e:\n",
-    "                print(f\"{package} not installed: {e}\")\n",
-    "            # Try importing the package again after installation\n",
-    "            importlib.import_module(package)\n",
+    "with open(requirements_path) as f:\n",
+    "    required_packages = f.read().splitlines()\n",
     "\n",
-    "check_and_install_packages(required_packages)\n",
-    "\n",
+    "# Check and install packages\n",
+    "check_and_install_packages(required_packages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the utility functions\n",
+    "from func import interpolate, export_grid, lin_sens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "'''\n",
     "Import the required modules to run all code in this notebook.\n",
     "'''\n",
@@ -116,6 +108,36 @@
     "from sklearn.metrics import r2_score\n",
     "\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if 'google.colab' in sys.modules:\n",
+    "# change the working directory to the cloned repository\n",
+    "\n",
+    "    os.chdir('I002658A_ESS')\n",
+    "else:\n",
+    "    # set the working directory, place an r in front to address special characters\n",
+    "    os.chdir(r'C:\\\\Users\\\\pdweerdt\\\\OneDrive - UGent\\\\I002658A_ESS\\\\AY 2024-2025\\\\Practicals') # adjust this line , set the working directory\n",
+    "\n",
+    "# get the current directory and store it as a variable\n",
+    "cd = os.getcwd()\n",
+    "print(\"Current Working Directory is \" , cd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Path to the data file\n",
+    "\n",
+    "file_path = \"/Hard_data/prediction.dat\""
    ]
   },
   {
@@ -188,10 +210,10 @@
     "cLHS_validation: validation sample dataset\n",
     "'''\n",
     "\n",
-    "FDEM_surveydata = 'https://users.ugent.be/~pjdsmedt/ESS2024/00_example/FDEM_bott.csv'\n",
-    "FDEM_transect = 'https://users.ugent.be/~pjdsmedt/ESS2024/00_example/FDEM_transect.csv'\n",
-    "cLHS_calibration = 'https://users.ugent.be/~pjdsmedt/ESS2024/00_example/cLHS_calibration.csv'\n",
-    "cLHS_validation = 'https://users.ugent.be/~pjdsmedt/ESS2024/00_example/cLHS_validation.csv'"
+    "FDEM_surveydata = '/00_example/FDEM_bott.csv'\n",
+    "FDEM_transect = '00_example/FDEM_transect.csv'\n",
+    "cLHS_calibration = '00_example/cLHS_calibration.csv'\n",
+    "cLHS_validation = '00_example/cLHS_validation.csv'"
    ]
   },
   {
