--- a/Notebooks/01_ESS-Introduction_to_geophysical_data_analysis.ipynb
+++ b/Notebooks/01_ESS-Introduction_to_geophysical_data_analysis.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,6 +55,8 @@
     "    # !pip install -r I002658A_ESS/requirements.txt\n",
     "    sys.path.append('/content/I002658A_ESS/utils')\n",
     "    sys.path.append('/content/I002658A_ESS')\n",
+    "else:\n",
+    "    sys.path.append('c:/Users/pdweerdt/Documents/Repos/I002658A_ESS/Utils')\n",
     "\n",
     "# Import the setup function\n",
     "from setup import check_and_install_packages\n",
@@ -63,7 +65,7 @@
     "if 'google.colab' in sys.modules:\n",
     "    requirements_path = '/content/I002658A_ESS/requirements.txt'\n",
     "else:\n",
-    "    requirements_path = '/c:/Users/pdweerdt/Documents/Repos/I002658A_ESS/requirements.txt'\n",
+    "    requirements_path = 'c:/Users/pdweerdt/Documents/Repos/I002658A_ESS/Utils/requirements.txt'\n",
     "\n",
     "with open(requirements_path) as f:\n",
     "    required_packages = f.read().splitlines()\n",
@@ -74,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,9 +86,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\pdweerdt\\AppData\\Local\\Temp\\ipykernel_22420\\2264157791.py:6: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
+      "  from IPython.core.display import display\n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "Import the required modules to run all code in this notebook.\n",
@@ -112,9 +123,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current Working Directory is  C:\\Users\\pdweerdt\\Documents\\Repos\\I002658A_ESS\n"
+     ]
+    }
+   ],
    "source": [
     "if 'google.colab' in sys.modules:\n",
     "# change the working directory to the cloned repository\n",
@@ -122,22 +141,11 @@
     "    os.chdir('I002658A_ESS')\n",
     "else:\n",
     "    # set the working directory, place an r in front to address special characters\n",
-    "    os.chdir(r'C:\\\\Users\\\\pdweerdt\\\\OneDrive - UGent\\\\I002658A_ESS\\\\AY 2024-2025\\\\Practicals') # adjust this line , set the working directory\n",
+    "    os.chdir(r'C:\\Users\\pdweerdt\\Documents\\Repos\\I002658A_ESS') # adjust this line , set the working directory\n",
     "\n",
     "# get the current directory and store it as a variable\n",
     "cd = os.getcwd()\n",
     "print(\"Current Working Directory is \" , cd)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Path to the data file\n",
-    "\n",
-    "file_path = \"/Hard_data/prediction.dat\""
    ]
   },
   {
@@ -184,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "iooxa": {
      "id": {
@@ -210,10 +218,10 @@
     "cLHS_validation: validation sample dataset\n",
     "'''\n",
     "\n",
-    "FDEM_surveydata = '/00_example/FDEM_bott.csv'\n",
-    "FDEM_transect = '00_example/FDEM_transect.csv'\n",
-    "cLHS_calibration = '00_example/cLHS_calibration.csv'\n",
-    "cLHS_validation = '00_example/cLHS_validation.csv'"
+    "FDEM_surveydata = '/Data/FDEM_bott.csv'\n",
+    "FDEM_transect = '/Data/FDEM_transect.csv'\n",
+    "cLHS_calibration = '/Data/cLHS_calibration.csv'\n",
+    "cLHS_validation = '/Data/cLHS_validation.csv'"
    ]
   },
   {
@@ -1070,7 +1078,7 @@
    }
   },
   "kernelspec": {
-   "display_name": "em_env",
+   "display_name": "ESS",
    "language": "python",
    "name": "python3"
   },
@@ -1084,7 +1092,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
