code & path update for new branch

--- a/Notebooks/01_ESS-Introduction_to_geophysical_data_analysis.ipynb
+++ b/Notebooks/01_ESS-Introduction_to_geophysical_data_analysis.ipynb
@@ -46,14 +46,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "if 'google.colab' in sys.modules:\n",
-    "    !git clone https://github.com/SENSE-UGent/I002658A_ESS.git\n",
+    "    !git clone --branch funcbr https://github.com/SENSE-UGent/I002658A_ESS.git\n",
     "    # !pip install -r I002658A_ESS/requirements.txt\n",
-    "    sys.path.append('/content/I002658A_ESS/utils')\n",
+    "    sys.path.append('/content/I002658A_ESS/Utils')\n",
     "    sys.path.append('/content/I002658A_ESS')\n",
     "else:\n",
     "    sys.path.append('c:/Users/pdweerdt/Documents/Repos/I002658A_ESS/Utils')\n",
@@ -63,7 +63,7 @@
     "\n",
     "# Read the requirements.txt file\n",
     "if 'google.colab' in sys.modules:\n",
-    "    requirements_path = '/content/I002658A_ESS/requirements.txt'\n",
+    "    requirements_path = '/content/I002658A_ESS/Utils/requirements.txt'\n",
     "else:\n",
     "    requirements_path = 'c:/Users/pdweerdt/Documents/Repos/I002658A_ESS/Utils/requirements.txt'\n",
     "\n",
