func.py + cd upd

--- a/Notebooks/01_ESS-Introduction_to_geophysical_data_analysis.ipynb
+++ b/Notebooks/01_ESS-Introduction_to_geophysical_data_analysis.ipynb
@@ -31,17 +31,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Install required packages as needed and import\n",
+    "# Import required packages for setup\n",
     "# -------------------------------------------- #\n",
     "\n",
-    "# import subprocess\n",
-    "# import importlib\n",
     "import sys\n",
-    "import os\n"
+    "import os"
    ]
   },
   {
@@ -50,16 +48,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#  Clone the repository and add it to the path\n",
     "if 'google.colab' in sys.modules:\n",
     "    !git clone --branch funcbr https://github.com/SENSE-UGent/I002658A_ESS.git\n",
-    "    # !pip install -r I002658A_ESS/requirements.txt\n",
-    "    sys.path.append('/content/I002658A_ESS/Utils')\n",
     "    sys.path.append('/content/I002658A_ESS')\n",
     "else:\n",
-    "    sys.path.append('c:/Users/pdweerdt/Documents/Repos/I002658A_ESS/Utils')\n",
+    "    sys.path.append('c:/Users/pdweerdt/Documents/Repos/I002658A_ESS') # Change this to the location of the repository on your machine\n",
     "\n",
     "# Import the setup function\n",
-    "from setup import check_and_install_packages\n",
+    "from Utils.setup import check_and_install_packages\n",
     "\n",
     "# Read the requirements.txt file\n",
     "if 'google.colab' in sys.modules:\n",
@@ -76,17 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import the utility functions\n",
-    "from func import interpolate, export_grid, lin_sens"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -122,28 +109,59 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Current Working Directory is  C:\\Users\\pdweerdt\\Documents\\Repos\\I002658A_ESS\n"
-     ]
-    }
-   ],
    "source": [
-    "if 'google.colab' in sys.modules:\n",
+    "## Set the Working Directory\n",
+    "\n",
+    "Do this to simplify subsequent reads and writes (avoid including the full address each time). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### For use in Google Colab\n",
+    "\n",
+    "Run the following cell if you automatically want to get the data from the repository and store it on your Google Colab drive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# change the working directory to the cloned repository\n",
     "\n",
-    "    os.chdir('I002658A_ESS')\n",
-    "else:\n",
-    "    # set the working directory, place an r in front to address special characters\n",
-    "    os.chdir(r'C:\\Users\\pdweerdt\\Documents\\Repos\\I002658A_ESS') # adjust this line , set the working directory\n",
+    "os.chdir('I002658A_ESS')\n",
     "\n",
     "# get the current directory and store it as a variable\n",
+    "\n",
+    "cd = os.getcwd()\n",
+    "print(\"Current Working Directory is \" , cd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### For local use\n",
+    "\n",
+    "Only run the following cell if you have the data locally stored."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set the working directory, place an r in front to address special characters\n",
+    "os.chdir(r'C:\\\\Users\\\\pdweerdt\\\\OneDrive - UGent\\\\I002658A_ESS')\n",
+    "\n",
+    "# get the current directory and store it as a variable\n",
+    "\n",
     "cd = os.getcwd()\n",
     "print(\"Current Working Directory is \" , cd)"
    ]
@@ -192,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "iooxa": {
      "id": {
@@ -218,10 +236,13 @@
     "cLHS_validation: validation sample dataset\n",
     "'''\n",
     "\n",
-    "FDEM_surveydata = '/Data/FDEM_bott.csv'\n",
-    "FDEM_transect = '/Data/FDEM_transect.csv'\n",
-    "cLHS_calibration = '/Data/cLHS_calibration.csv'\n",
-    "cLHS_validation = '/Data/cLHS_validation.csv'"
+    "FDEM_surveydata = cd + '/Data/FDEM_bott.csv'\n",
+    "FDEM_transect = cd + '/Data/FDEM_transect.csv'\n",
+    "cLHS_calibration = cd + '/Data/cLHS_calibration.csv'\n",
+    "cLHS_validation = cd + '/Data/cLHS_validation.csv'\n",
+    "\n",
+    "# print an example dataset location\n",
+    "print('FDEM_surveydata path: ' FDEM_surveydata)"
    ]
   },
   {
@@ -1060,13 +1081,6 @@
     "plt.legend()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
