--- a/Notebooks/03_ESS_Interpreting_geophysical_soil_variations.ipynb
+++ b/Notebooks/03_ESS_Interpreting_geophysical_soil_variations.ipynb
@@ -21,70 +21,74 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Install required packages as needed and import\n",
+    "# Import required packages for setup\n",
     "# -------------------------------------------- #\n",
     "\n",
-    "import subprocess\n",
-    "import importlib\n",
     "import sys\n",
-    "\n",
-    "# List of required packages\n",
-    "required_packages = [\n",
-    "    'IPython',\n",
-    "    'ipywidgets',\n",
-    "    'numpy',\n",
-    "    'pandas',\n",
-    "    'matplotlib',\n",
-    "    'scipy',\n",
-    "    'sklearn',\n",
-    "    'geopandas',\n",
-    "    'rasterio',\n",
-    "    'shapely',\n",
-    "    'emagpy',\n",
-    "    'requests'\n",
-    "]\n",
-    "\n",
-    "def check_and_install_packages(package_list):\n",
-    "# Function to check for required packages and install them if not found\n",
-    "# integrates functionality to operate in Jupyter environment (including \n",
-    "# Google Colab) or standard IDE (VSCode, PyCharm, etc.)\n",
-    "# ==================================================================== #\n",
-    "    for package in package_list:\n",
-    "        try:\n",
-    "            importlib.import_module(package)\n",
-    "        except ImportError:\n",
-    "            print(f\"{package} not found, installing...\")\n",
-    "            try:\n",
-    "                # Check if in a Jupyter (IPython) environment\n",
-    "                if 'get_ipython' in globals():\n",
-    "                    print(\"Using Jupyter magic command to install.\")\n",
-    "                    get_ipython().system(f'pip install {package}')\n",
-    "                else:\n",
-    "                    # Fallback to standard IDE installation method\n",
-    "                    subprocess.run(\n",
-    "                        [sys.executable, '-m', 'pip', 'install', package], \n",
-    "                        check=True, \n",
-    "                        capture_output=True\n",
-    "                        )\n",
-    "            except Exception as e:\n",
-    "                print(f\"{package} not installed: {e}\")\n",
-    "            # Try importing the package again after installation\n",
-    "            importlib.import_module(package)\n",
-    "\n",
-    "check_and_install_packages(required_packages)\n",
-    "\n"
+    "import os"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set the repository path:\n",
+    "# If the code is run in Google Colab This code will check if the repository is already cloned, if not it will clone it\n",
+    "# If the code is run locally, the repository path is set to the local path\n",
+    "# -------------------------------------------- #\n",
+    "\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    repo_path = '/content/I002658A_ESS'\n",
+    "    if not os.path.exists(repo_path):\n",
+    "        !git clone --branch funcbr https://github.com/SENSE-UGent/I002658A_ESS.git\n",
+    "    if repo_path not in sys.path:\n",
+    "        sys.path.append(repo_path)\n",
+    "else:\n",
+    "    repo_path = r'c:/Users/pdweerdt/Documents/Repos/I002658A_ESS' # Change this to the location of the repository on your machine\n",
+    "    if repo_path not in sys.path:\n",
+    "        sys.path.append(repo_path) \n",
+    "\n",
+    "# Import the setup function\n",
+    "from Utils.setup import check_and_install_packages\n",
+    "\n",
+    "# Read the requirements.txt file\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    requirements_path = '/content/I002658A_ESS/Utils/requirements.txt'\n",
+    "else:\n",
+    "    requirements_path = r'c:/Users/pdweerdt/Documents/Repos/I002658A_ESS/Utils/requirements.txt' # Change this to the location of Utils in the repository on your machine\n",
+    "\n",
+    "with open(requirements_path) as f:\n",
+    "    required_packages = f.read().splitlines()\n",
+    "\n",
+    "# Check and install packages\n",
+    "check_and_install_packages(required_packages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the utility functions\n",
+    "from Utils.func import (interpolate, export_grid, lin_sens, \n",
+    "                        update_plot, update_plot2, \n",
+    "                        waxsmits, linde, fu\n",
+    "                        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/zt/rkj9q2k9125drmwf6bn1mybc0000gn/T/ipykernel_67300/1535017046.py:15: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
+      "C:\\Users\\pdweerdt\\AppData\\Local\\Temp\\ipykernel_11700\\1564817203.py:14: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
       "  from IPython.core.display import display\n"
      ]
     }
@@ -97,7 +101,6 @@
     "    combine the notebook with cells from the first practicum.\n",
     "'''\n",
     "# General utility modules\n",
-    "import os\n",
     "import warnings\n",
     "import re\n",
     "import requests\n",
@@ -137,6 +140,76 @@
     "from emagpy import Problem\n",
     "\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Set the Working Directory\n",
+    "\n",
+    "Do this to simplify subsequent reads and writes (avoid including the full address each time). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### For use in Google Colab\n",
+    "\n",
+    "Run the following cell if you automatically want to get the data from the repository and store it on your Google Colab drive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# change the working directory to the cloned repository\n",
+    "\n",
+    "os.chdir('I002658A_ESS')\n",
+    "\n",
+    "# get the current directory and store it as a variable\n",
+    "\n",
+    "cd = os.getcwd()\n",
+    "print(\"Current Working Directory is \" , cd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### For local use\n",
+    "\n",
+    "Only run the following cell if you have the data locally stored."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 2] The system cannot find the file specified: 'C:\\\\\\\\Users\\\\\\\\pdweerdt\\\\\\\\OneDrive - UGent\\\\\\\\I002658A_ESS'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# set the working directory, place an r in front to address special characters\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mchdir\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mC:\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[38;5;124;43mUsers\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[38;5;124;43mpdweerdt\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[38;5;124;43mOneDrive - UGent\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[38;5;124;43mI002658A_ESS\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# get the current directory and store it as a variable\u001b[39;00m\n\u001b[0;32m      6\u001b[0m cd \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mgetcwd()\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 2] The system cannot find the file specified: 'C:\\\\\\\\Users\\\\\\\\pdweerdt\\\\\\\\OneDrive - UGent\\\\\\\\I002658A_ESS'"
+     ]
+    }
+   ],
+   "source": [
+    "# set the working directory, place an r in front to address special characters\n",
+    "os.chdir(r'C:\\\\Users\\\\pdweerdt\\\\OneDrive - UGent\\\\I002658A_ESS')\n",
+    "\n",
+    "# get the current directory and store it as a variable\n",
+    "\n",
+    "cd = os.getcwd()\n",
+    "print(\"Current Working Directory is \" , cd)"
    ]
   },
   {
@@ -782,167 +855,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 2.0: Pedophysical modelling - Linde et al. 2006\n",
     "# -----------------------------------------------\n",
-    "\n",
-    "def waxsmits(vwc, bd, water_ec, CEC, pdn=2.65, m=1.5, n=2, a = 0.4):\n",
-    "    \"\"\"        \n",
-    "    Pedophysical modelling following the revised Waxman-Smits model\n",
-    "    as proposed by Revil et al. 2013.\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    vwc: float\n",
-    "        volumetric water content [%]\n",
-    "    \n",
-    "    bd: float\n",
-    "        bulk density [g/cm3]\n",
-    "\n",
-    "    CEC: float\n",
-    "        cation exchange capacity [meq/100g]\n",
-    "\n",
-    "    water_ec: float\n",
-    "        Soil water real electrical conductivity [mS/m]\n",
-    "\n",
-    "    pdn: float\n",
-    "        particle density [g/cm3]\n",
-    "\n",
-    "    m: float\n",
-    "        cementation exponent [-]\n",
-    "\n",
-    "    n: float\n",
-    "        saturation exponent [-]\n",
-    "\n",
-    "    a: float\n",
-    "        fitting parameter [-] (see Wunderlich et al. 2013)\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    bulk_ec: float\n",
-    "        Soil bulk real electrical conductivity [mS/m]\n",
-    "    \"\"\"  \n",
-    "    #Convert particle density to kg/m3\n",
-    "    pdn_kg = pdn * 1000\n",
-    "    water_ec = water_ec/1000 # to S/m\n",
-    "    por = 1-(bd/pdn)\n",
-    "    sat_w = (vwc/100)/por \n",
-    "    \n",
-    "    Q_v = (pdn_kg) * ((1-por) / por) * CEC\n",
-    "    # formation factor\n",
-    "    f_form = por**(-m) \n",
-    "    # Empirical ion mobility factor (Revil et al. 1998)\n",
-    "    B = (4.78e-8) * (1 - 0.6 * np.exp(-(water_ec/0.013))) \n",
-    "\n",
-    "    bulk_ec = (sat_w**n/f_form) / a * (water_ec + ((B * Q_v)/sat_w))\n",
-    "    return bulk_ec*1000 # to milliSiemens per meter\n",
-    "    \n",
-    "\n",
-    "\n",
-    "def linde(vwc, bd, water_ec, clay, sand, pdn=2.65, m=1.5, n=2):\n",
-    "    \"\"\"        \n",
-    "    Pedophysical modelling following the Linde et al. 2006 model.\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    vwc: float\n",
-    "        volumetric water content [%]\n",
-    "    \n",
-    "    bd: float\n",
-    "        bulk density [g/cm3]\n",
-    "\n",
-    "    clay: float\n",
-    "        Soil volumetric clay content [%]\n",
-    "\n",
-    "    water_ec: float\n",
-    "        Soil water real electrical conductivity [mS/m]\n",
-    "\n",
-    "    pdn: float\n",
-    "        particle density [g/cm3]\n",
-    "\n",
-    "    m: float\n",
-    "        cementation exponent [-]\n",
-    "\n",
-    "    n: float\n",
-    "        saturation exponent [-]\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    bulk_ec: float\n",
-    "        Soil bulk real electrical conductivity [mS/m]\n",
-    "    \"\"\"  \n",
-    "\n",
-    "    por = 1-(bd/pdn) # porosity\n",
-    "    sat_w = (vwc/100)/por # water saturation\n",
-    "    f_form = por**(-m) # formation factor\n",
-    "    \n",
-    "    water_ec = water_ec/1000\n",
-    "\n",
-    "    silt = 100 - clay - sand\n",
-    "\n",
-    "    radius_clay = 0.002/2000\n",
-    "    radius_silt = 0.025/2000\n",
-    "    radius_sand = 0.75/2000\n",
-    "\n",
-    "    solid_ec = 1*(10**-7) # Solid electrical conductivity\n",
-    "    clay_ec= 3*(solid_ec/radius_clay)  # clay electrical conductivity\n",
-    "    silt_ec = 3*(solid_ec/radius_silt) # Silt electrical conductivity\n",
-    "    sand_ec = 3*(solid_ec/radius_sand) # Sand electrical conductivity\n",
-    "\n",
-    "    surf_ec = np.average([clay_ec*(clay/100), \n",
-    "                          sand_ec*(sand/100), \n",
-    "                          silt_ec*(silt/100)])\n",
-    "    bulk_ec = (((sat_w**n)*water_ec) \n",
-    "               + (f_form - 1)*(surf_ec))/f_form \n",
-    "    \n",
-    "    return bulk_ec*1000\n",
-    "\n",
-    "def fu(vwc, bd, water_ec, clay, pdn=2.65, solid_ec = (1*(10**-7)), w=2):\n",
-    "    \"\"\"\n",
-    "    Pedophysical modelling following Fu et al. 2021\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    vwc : float\n",
-    "        Soil volumetric water content [%].\n",
-    "\n",
-    "    bd : float\n",
-    "        Soil bulk density [g/cm3].\n",
-    "\n",
-    "    water_ec : float\n",
-    "        Soil water real electrical conductivity [mS/m].\n",
-    "\n",
-    "    clay : float\n",
-    "        Soil clay content [%].\n",
-    "\n",
-    "    pdn : float, optional\n",
-    "        Particle density [g/cm3], default is 2.65.\n",
-    "\n",
-    "    solid_ec : float, optional\n",
-    "        Soil solid real electrical conductivity [mS/m], default is 1e-7.\n",
-    "        \n",
-    "    w : float, optional\n",
-    "        Phase exponent of the water, default is 2.\n",
-    "    \n",
-    "    Returns\n",
-    "    -------\n",
-    "    bulk_ec: float\n",
-    "        Soil bulk real electrical conductivity [mS/m]\n",
-    "\n",
-    "    \"\"\"\n",
-    "    d = 0.6539\n",
-    "    e = 0.0183\n",
-    "    vwc = vwc/100 # to m3/m3\n",
-    "    water_ec  = water_ec/1000 # S/m\n",
-    "    surf_ec = (d*clay/(100-clay))+e # S/m\n",
-    "    por = 1-(bd/pdn) # porosity []\n",
-    "\n",
-    "    bulk_ec = water_ec * vwc**w + vwc * por * surf_ec + (1-por) * solid_ec\n",
-    "    \n",
-    "    return bulk_ec*1000\n"
+    "help(waxsmits)\n",
+    "help(linde)\n",
+    "help(fu)"
    ]
   },
   {
@@ -956,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1009,40 +930,8 @@
     "b_dens_i = np.linspace(min_bd, max_bd, iterations)\n",
     "\n",
     "# Update plot function\n",
-    "def update_plot(CEC, VWC, BD,ECW):\n",
-    "    # Calculate model outputs\n",
-    "    c_v_it = [waxsmits(vwc, BD, ECW, CEC) for vwc in vwc_i]\n",
-    "    c_b_it = [waxsmits(VWC, bd, ECW, CEC) for bd in b_dens_i]\n",
-    "    c_c_it = [waxsmits(VWC, BD, ECW, cec) for cec in CEC_i]\n",
-    "\n",
-    "    # Plotting\n",
-    "    fig, axes = plt.subplots(1, 3, figsize=(16, 5))\n",
-    "\n",
-    "    axes[0].plot(vwc_i, c_v_it, linewidth=3)\n",
-    "    axes[0].set_xlabel(\"volumetric water content [%]\")\n",
-    "    axes[0].set_ylabel(\"bulk EC [mS/m]\")\n",
-    "    axes[0].set_title(\"change bd and CEC with slider\")\n",
-    "\n",
-    "    # CEC and BD plot\n",
-    "    axes[1].plot(b_dens_i, c_b_it, linewidth=3)\n",
-    "    axes[1].set_xlabel(\"bulk density [g/cm^3]\")\n",
-    "    axes[1].set_ylabel(\"bulk EC [mS/m]\")\n",
-    "    axes[1].set_title(\"change vwc and CEC with slider\")\n",
-    "\n",
-    "\n",
-    "    # CEC and BD plot\n",
-    "    average_ec = np.mean(c_c_it)\n",
-    "    plot_lab = 'mean bulk EC: ' + str(round(average_ec, 2)) + '[mS/m]'\n",
-    "    axes[2].plot(CEC_i, c_c_it, label=plot_lab, linewidth=3)\n",
-    "    \n",
-    "    # set y axis range from 0 to 100 mS/m\n",
-    "    axes[2].set_ylim([0, 100])\n",
-    "    axes[2].set_xlabel(\"CEC [mmol/g]\")\n",
-    "    axes[2].set_ylabel(\"bulk EC [mS/m]\")\n",
-    "    axes[2].legend(loc='upper right')\n",
-    "    fig.suptitle('Evaluation of Waxman & Smits (1968) EC model with '\n",
-    "                 'Revil et al. 1998 modification', fontsize=14)\n",
-    "    plt.show()\n",
+    "# we used updated plot function \n",
+    "help(update_plot2)\n",
     "\n",
     "# Define sliders\n",
     "CEC_slider = FloatSlider(value=min_CEC, min=min_CEC, max=max_CEC, \n",
@@ -1055,12 +944,12 @@
     "                         step=0.1, description='EC_w [mS/m]')\n",
     "\n",
     "# Use interact to create interactive widgets\n",
-    "interact(update_plot, CEC=CEC_slider, VWC=VWC_slider, BD=BD_slider, ECW=ECW_slider)"
+    "interact(update_plot2, CEC=CEC_slider, VWC=VWC_slider, BD=BD_slider, ECW=ECW_slider)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1110,44 +999,6 @@
     "clay_i = np.linspace(min_clay, max_clay, iterations)\n",
     "b_dens_i = np.linspace(min_bd, max_bd, iterations)\n",
     "vwc_i = np.linspace(min_vwc, max_vwc, iterations)\n",
-    "\n",
-    "# Update plot function based on slider changes\n",
-    "def update_plot(CLAY, VWC, ECW, BD):\n",
-    "    # Iterate over bulk density for first plot\n",
-    "    SAND = (100-CLAY)/2\n",
-    "    linde_b_it = [linde(VWC, bd, ECW, CLAY, SAND) for bd in b_dens_i]\n",
-    "    fu_b_it = [fu(VWC, bd, ECW, CLAY) for bd in b_dens_i]\n",
-    "    # Iterate over clay content for second plot\n",
-    "    linde_c_it = [linde(VWC, BD, ECW, clay,((100-clay)/2)) for clay in clay_i]\n",
-    "    fu_c_it = [fu(VWC, BD, ECW, clay) for clay in clay_i]\n",
-    "    # Iterate over VWC for third plot\n",
-    "    linde_v_it = [linde(vwc, BD, ECW, CLAY, SAND) for vwc in vwc_i]\n",
-    "    fu_v_it = [fu(vwc, BD, ECW, CLAY, SAND) for vwc in vwc_i]\n",
-    "\n",
-    "    # Plotting\n",
-    "    fig, axes = plt.subplots(1, 3, figsize=(18, 5))\n",
-    "    \n",
-    "    axes[0].plot(b_dens_i, linde_b_it, linewidth=3)\n",
-    "    axes[0].plot(b_dens_i, fu_b_it, linewidth=3)\n",
-    "    axes[0].set_xlabel(\"bulk density [g/cm^3]\")\n",
-    "    axes[0].set_ylabel(\"bulk EC [mS/m]\")\n",
-    "    axes[0].set_title(\"change clay and vwc with slider\")\n",
-    "\n",
-    "    axes[1].plot(clay_i, linde_c_it, linewidth=3)\n",
-    "    axes[1].plot(clay_i, fu_c_it, linewidth=3)\n",
-    "    axes[1].set_xlabel(\"clay content [%]\")\n",
-    "    axes[1].set_ylabel(\"bulk EC [mS/m]\")\n",
-    "    axes[1].set_title(\"change vwc and bd with slider\")\n",
-    "\n",
-    "    axes[2].plot(vwc_i, linde_v_it, label='Linde et al., 2006', linewidth=3)\n",
-    "    axes[2].plot(vwc_i, fu_v_it, label='Fu et al., 2021', linewidth=3)\n",
-    "    axes[2].set_xlabel(\"volumetric water content [%]\")\n",
-    "    axes[2].set_ylabel(\"bulk EC [mS/m]\")\n",
-    "    axes[2].set_title(\"change clay and bd with slider\")\n",
-    "    \n",
-    "    axes[2].legend(loc='upper left')\n",
-    "    fig.suptitle(f'Comparison of Linde et al. 2006 and Fu et al. 2021 for EC modelling', fontsize=14)\n",
-    "    plt.show()\n",
     "\n",
     "# Define sliders for each parameter and assure that sliders are positioned below the plots\n",
     "clay_slider = FloatSlider(value=min_clay, min=min_clay, max=max_clay, step=0.1, description='Clay content [%]', style={'description_width': 'initial'}) \n",
@@ -1599,7 +1450,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "em_env",
+   "display_name": "ESS",
    "language": "python",
    "name": "python3"
   },
@@ -1613,7 +1464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
