cleanup + small fixes + gitignore init

--- a/Notebooks/01_ESS-Introduction_to_geophysical_data_analysis.ipynb
+++ b/Notebooks/01_ESS-Introduction_to_geophysical_data_analysis.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,18 +83,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\pdweerdt\\AppData\\Local\\Temp\\ipykernel_22980\\2264157791.py:6: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
-      "  from IPython.core.display import display\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "Import the required modules to run all code in this notebook.\n",
@@ -133,31 +124,15 @@
    "source": [
     "### For use in Google Colab\n",
     "\n",
-    "Run the following cell if you automatically want to get the data from the repository and store it on your Google Colab drive"
+    "Run the following cell if you automatically want to get the data from the repository"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[WinError 2] The system cannot find the file specified: 'I002658A_ESS'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# change the working directory to the cloned repository\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mchdir\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mI002658A_ESS\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# get the current directory and store it as a variable\u001b[39;00m\n\u001b[0;32m      7\u001b[0m cd \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mgetcwd()\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 2] The system cannot find the file specified: 'I002658A_ESS'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# change the working directory to the cloned repository\n",
-    "\n",
-    "os.chdir('I002658A_ESS')\n",
-    "\n",
     "# get the current directory and store it as a variable\n",
     "\n",
     "cd = os.getcwd()\n",
@@ -177,22 +152,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[WinError 2] The system cannot find the file specified: 'C:\\\\\\\\Users\\\\\\\\pdweerdt\\\\\\\\OneDrive - UGent\\\\\\\\I002658A_ESS'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# set the working directory, place an r in front to address special characters\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mchdir\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mC:\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[38;5;124;43mUsers\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[38;5;124;43mpdweerdt\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[38;5;124;43mOneDrive - UGent\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[38;5;124;43mI002658A_ESS\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# get the current directory and store it as a variable\u001b[39;00m\n\u001b[0;32m      6\u001b[0m cd \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mgetcwd()\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 2] The system cannot find the file specified: 'C:\\\\\\\\Users\\\\\\\\pdweerdt\\\\\\\\OneDrive - UGent\\\\\\\\I002658A_ESS'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# set the working directory, place an r in front to address special characters\n",
-    "os.chdir(r'C:\\\\Users\\\\pdweerdt\\\\OneDrive - UGent\\\\I002658A_ESS\\\\Practicum')\n",
+    "os.chdir(r'c:/Users/pdweerdt/Documents/Repos')\n",
     "\n",
     "# get the current directory and store it as a variable\n",
     "\n",
@@ -276,7 +239,7 @@
     "cLHS_validation = cd + '//Data//Example//cLHS_validation.csv'\n",
     "\n",
     "# print an example dataset location\n",
-    "print('FDEM_surveydata path: ' FDEM_surveydata)"
+    "print('FDEM_surveydata path: ', FDEM_surveydata)"
    ]
   },
   {
